# pytest_template

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
docs/: gemini2.5pro.md
src/my_package/: __init__.py  basic_math.py  calculator.py  data_processor.py  exceptions.py
tests/: __init__.py  conftest.py  test_basic_math.py  test_calculator.py  test_data_processor.py  test_exceptions.py  test_fixtures_and_markers.py
